# bookmarkerApp

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  tree.txt
fastapi-backend/: Dockerfile  fastapi_app.py  pyproject.toml
frontend/: index.html
frontend/templates/: bookmark_form.html  bookmarks.html  folders.html
go-server/: Dockerfile  go.mod  main.go
src/: Dockerfile
src/bookmarker/: main.py  parser.py
src/frontend/static/css/: main.css
src/frontend/static/javascript/: app.js
src/frontend/templates/: article.html  dashboard.html  error.html
src/frontend/templates/layout/: base.html
src/frontend/templates/pages/: article.html  dashboard.html
src/frontend/templates/partials/: article_card.html  sidebar.html
src/tests/: test_integration.py  test_unit.py
